Overflow error handling, updated equation typesetting

--- a/notes/spanne_model/spanne_notes.tex
+++ b/notes/spanne_model/spanne_notes.tex
@@ -110,5 +110,15 @@ difference is that our working model only incorporates the noise from the contra
   \bar{N} &\equiv N_0 \text{exp}\{-\mu_c r - \mu_{bg} d\}
 \end{align}  
 
-whereas Spanne adds the variances from the contrast-present and contrast-absent cases in quadrature. 
+whereas Spanne adds the variances from the contrast-present and contrast-absent cases in quadrature.
+
+Comparisons of the two noise models (additional constants in Spanne model were not included) are shown below for a few values of contrast density. You can see that the Spanne model has generally the same shape,
+but a lower overall value.
+
+\begin{figure}[t]
+  \includegraphics[width=\linewidth]{comparison}
+\end{figure}
+
+
 \end{document}
+
